# bitflags

./: CMakeLists.txt  README.md
.github/workflows/: clang.yml  gcc.yml  msvc2019.yml
include/bitflags/: bitflags.h
tests/: CMakeLists.txt  bitflags.cpp
